fixed height of faq on mobile

--- a/src/scss/components/landing/faq/_faq.scss
+++ b/src/scss/components/landing/faq/_faq.scss
@@ -3,6 +3,7 @@
     @include flexBox();
     text-align: center;
     position: relative;
+    max-height: fit-content;
   }
   @import './container/container';
 }
